--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 1.2
+
+   o Compatibility bug fixes with new version 4.0 of 'mclust' package.
+   o Add verbose argument to summary.msir
+
 Version 1.1
 
    o New mvdnorm function which should be more stable in the case of near
