--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,10 +1,12 @@
-Version 1.2
+Version 1.3 (2013-02)
+   o Removed MASS as suggested since now it is not needed for examples in help pages.
+   o Fixed comments and notes from package check.
 
+Version 1.2 (2012-08)
    o Compatibility bug fixes with new version 4.0 of 'mclust' package.
    o Add verbose argument to summary.msir
 
-Version 1.1
-
+Version 1.1 (2012-05)
    o New mvdnorm function which should be more stable in the case of near
      singularity of covariance matrix.
    o Added byte-code compiling in the DESCRIPTION file.
@@ -16,6 +18,5 @@ Version 1.1
    o Update reference to CSDA paper.
    o Bugs fix.
 
-Version 1.0
-
+Version 1.0 (2012-05)
    o Submitted to CRAN.
